--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -79,6 +79,8 @@
                             <input type="file" name="fileNfContainerNf" id="fileNfContainerNf" />
                         </div>
                     </div>
+                    <div id="divExclusaoContainerNf">
+                    </div>
                 </div>
             </div>
             <div class="col-24 col-md-12 col-lg-15 col-xl-12">
@@ -178,6 +180,8 @@
                                 <div class="fallback">
                                     <input type="file" name="fileNfVariosContainer" id="fileNfVariosContainer" />
                                 </div>
+                            </div>
+                            <div id="divExclusaoNfVariosContainer">
                             </div>
                         </div>
                     </div>
