--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCarga.cshtml
@@ -230,6 +230,7 @@
                 '<input type="file" name="fileVariasNf_1" id="fileVariasNf_1" />' +
                 '</div>' +
                 '</div>' +
+                '<div id="divExclusaoVariasNf_1"></div>' +
                 '</div>' +
                 '</div>' +
                 '<div class="col-1 p-0">' +
@@ -663,6 +664,7 @@
                 '<input type="file" name="fileVariasNf_' + maxTotal.toString() + '" id="fileVariasNf_' + maxTotal.toString() + '" />' +
                 '</div>' +
                 '</div>' +
+                '<div id="divExclusaoVariasNf_' + maxTotal.toString()+'"></div>' +
                 '</div>' +
                 '</div>' +
                 '<div class="col-1 p-0">' +
