--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -71,6 +71,17 @@
       
         <div class="table-responsive" id="divRegistrosCargas">
             <table class="table">
+                <thead>
+                    <tr>
+                        <td></td>
+                        <td>Sequência</td>
+                        <td>Equipamento</td>
+                        <td>Data Coleta</td>
+                        <td>Peso</td>
+                        <td>Comentário</td>
+                        <td></td>
+                    </tr>
+                </thead>
                 <tbody></tbody>
             </table>
         </div>
