--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -215,6 +215,18 @@
 
             <div class="table-responsive" id="divRegistrosImportarCargas">
                 <table class="table">
+                    <thead>
+                        <tr>
+                            <td></td>
+                            <td>Sequência</td>
+                            <td>Container</td>
+                            <td>Data Entrega</td>
+                            <td>Comentário</td>
+                            <td>Valor</td>
+                            <td>NFe</td>
+                            <td></td>
+                        </tr>
+                    </thead>
                     <tbody></tbody>
                 </table>
             </div>
