--- a/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Index.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Index.cshtml
@@ -10,38 +10,20 @@
         <div class="portlet-title">
             <h4>
                 <img src="~/iconpack.axd/16/page_white_code" />
-                @TAdm("Assuntos")
+                @TAdm("Log Integração")
             </h4>
-        </div>
-        <div class="portlet-widgets">
-          @if (AdminHelper.CheckPermission(Permissao.Modificar))
-          { 
-            <a class="btn btn-green" href="@urlEditar">@TAdm("Adicionar")</a> 
-          }
-
-            @Helpers.BotaoExcluir(T("Excluir"))
         </div>
         <div class="clearfix"></div>
     </div>
     <div class="portlet-body">
-        @if (salvo)
-        {
-            <div class="alert alert-success">
-                @TAdm("Registro salvo com sucesso!")
-            </div>
-        }
-
-        @Helpers.PainelExcluir(T("Atenção"), T("Você confirma a exclusão dos itens selecionados?"), Request.Url.AbsolutePath + "/excluir")
-
         <div class="table-responsive">
             <div id="toolbar"></div>
             <table id="lista" class="table table-striped table-bordered table-hover table-blue">
                 <thead>
                     <tr>
-                        <th>@TAdm("Assunto")</th>
-                        <th style="width: 300px;">@TAdm("Class")</th>
-                        <th style="width: 50px;">@TAdm("Ativo")</th>
-                        <th style="width: 50px;">@TAdm("Excluir")</th>
+                        <th style="width: 100px;">@TAdm("Codigo")</th>
+                        <th>@TAdm("Data cadastro")</th>
+                        <th>@TAdm("Tipo")</th>
                     </tr>
                 </thead>
             </table>
@@ -59,10 +41,9 @@
                     "ajax": "/cms/@portal.Diretorio/Assuntos/Listar",
                     "order": [[0, "desc"]],
                     "columns": [
-                        @Helpers.ColunaEditar("Assunto", urlEditar, "Codigo"),
-                        @Helpers.ColunaEditar("Css", urlEditar, "Codigo"),
-                        @Helpers.ColunaEditarBoolean("IsAtivo", urlEditar, "Codigo", "Sim", "Não"),
-                        @Helpers.ColunaExcluir("Codigo")
+                        @Helpers.ColunaEditar("Codigo", urlEditar, "Codigo"),
+                        @Helpers.ColunaEditarDataHora("DataCadastro", urlEditar, "Codigo"),
+                        @Helpers.ColunaEditar("Tipo", urlEditar, "Codigo"),
                     ]
                 }
             );
