--- a/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
@@ -28,9 +28,9 @@
                 <label>@TAdm("Tipo")</label>
                 <input type="text" class="form-control" value="@Model.Tipo" disabled />
             </div>
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-12">
                 <label>@TAdm("Json")</label>
-                <textarea>@Model.Json</textarea> 
+                <textarea class="form-control" style="height:600px">@Model.Json@Model.Imagem@Model.RetornoAPI</textarea> 
             </div>
             <div class="form-group col-md-12 text-right">
                 <a class="btn btn-white" href="@urlLista">@TAdm("Cancelar")</a>
