--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
@@ -12,10 +12,15 @@
     <input type="text" class="form-control" name="UrlImportacao" id="UrlImportacao" placeholder="@T("Url Importação")" value="@Model.UrlImportacao">
 </div>
 <div class="form-group col-md-24">
+    <label>@T("Url Importação")</label>
+    <input type="text" class="form-control" name="UrlImportacao" id="UrlImportacao" placeholder="@T("Url Importação DTA")" value="@Model.UrlImportacaoDTA">
+</div>
+<div class="form-group col-md-24">
     <label>@T("View")</label>
     <select name="NomeView" class="form-control">
         <option value="EscolherTipo" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("EscolherTipo") ? "selected" : "")>@T("EscolherTipo")</option>
         <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Importacao") ? "selected" : "")>@T("Importação")</option>
+        <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("ImportacaoDTA") ? "selected" : "")>@T("Importação DTA")</option>
         <option value="Exportar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Exportacao") ? "selected" : "")>@T("Exportação")</option>
     </select>
 </div>
